z-index fix

--- a/common/web/css/frontend/frontend.less
+++ b/common/web/css/frontend/frontend.less
@@ -78,6 +78,7 @@
 	position: fixed;
 	top: @top-menu-height;
 	width: @sidepanelwidth;
+	z-index: 900;
 
 	.module {
 		margin-top: @gutter;
